--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -37,7 +37,7 @@ jobs:
         with:
           ruby-version: '3.0'
           bundler-cache: true
-        run: bundle exec rake
+      - run: bundle exec rake
 
       - name: install fastlane
         run: |
