--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -54,7 +54,7 @@ jobs:
 #        run: bundle exec fastlane run_unit_tests
 
       - name: Unit Test
-        run: ./gradlew testDebugUnitTest
+        run: ./gradlew test
 
       - name: Check Test Results
         run: |
