--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,7 +1,7 @@
 name: Pull Request
 
 on:
-  pull-request:
+  pull_request:
     branches:
       - master
 
@@ -20,24 +20,26 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '17'
+          distribution: 'temurin'
           cache: 'gradle'
 
       - name: Cache Gradle
         uses: actions/cache@v3
         with:
-        path: |
-          ~/.gradle/caches
-          ~/.gradle/wrapper
-        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
-        restore-keys: |
-          ${{ runner.os }}-gradle-
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
 
-      - name: Install ruby
-        uses: ruby/setup-ruby@v1
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@ec02537da5712d66d4d50a0f33b7eb52773b5ed1
         with:
-          ruby-version: '3.0'
-          bundler-cache: true
-        run: bundle exec rake
+          ruby-version: '3.1'
+
+      - name: Install dependencies
+        run: bundle install
 
       - name: install fastlane
         run: |
@@ -45,8 +47,14 @@ jobs:
           bundle install
           bundle exec fastlane install_plugins
 
-      - name: Build and run tests
-        run: bundle exec fastlane run_unit_tests
+      - name: Grant execution permission to gradlew
+        run: chmod +x gradlew
+
+#      - name: run unit tests
+#        run: bundle exec fastlane run_unit_tests
+
+      - name: Unit Test
+        run: ./gradlew test
 
       - name: Check Test Results
         run: |
@@ -56,6 +64,3 @@ jobs:
             echo "Tests failed. The workflow will be marked as failed, and the pull request cannot be merged."
             exit 1
           fi
-
-      - name: Increase Version Number
-        run: fastlane run_increase_version_number
