--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -7,6 +7,16 @@ on:
 
 jobs:
 
+  lint:
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: check linting
+        run: ./gradlew ktlintCheck --continue
+
+
+
   tests:
 
     runs-on: ubuntu-latest
