--- a/build.gradle
+++ b/build.gradle
@@ -3,4 +3,9 @@ plugins {
     id 'com.android.application' version '8.0.2' apply false
     id 'com.android.library' version '8.0.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
+    id 'org.jlleitschuh.gradle.ktlint' version '11.4.0'
+}
+
+allprojects {
+    apply plugin: "org.jlleitschuh.gradle.ktlint"
 }
