--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -7,8 +7,41 @@ on:
 
 jobs:
 
-  build:
+  lint:
 
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout current repository in runner
+        uses: actions/checkout@v3
+
+      - name: Setup JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: 'gradle'
+
+      - name: Cache Gradle
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
+      - name: Grant execution permission to gradlew
+        run: chmod +x gradlew
+
+      - name: check linting
+        run: ./gradlew ktlintCheck --continue
+
+
+
+  tests:
+    needs: [ lint ]
     runs-on: ubuntu-latest
 
     steps:
@@ -33,28 +66,14 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@ec02537da5712d66d4d50a0f33b7eb52773b5ed1
-        with:
-          ruby-version: '3.1'
-
-      - name: Install dependencies
-        run: bundle install
-
-      - name: install fastlane
-        run: |
-          gem install bundler
-          bundle install
-          bundle exec fastlane install_plugins
-
       - name: Grant execution permission to gradlew
         run: chmod +x gradlew
 
-#      - name: run unit tests
-#        run: bundle exec fastlane run_unit_tests
-
       - name: Unit Test
         run: ./gradlew test
+
+      - name: Android Test Report Action
+        uses: asadmansr/android-test-report-action@v1.2.0
 
       - name: Check Test Results
         run: |
