--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'org.jlleitschuh.gradle.ktlint'
 }
 
 android {
@@ -79,6 +80,10 @@ dependencies {
 }
 ktlint {
     android = true
+    debug = true
     ignoreFailures= false
     disabledRules =["final-newline","no-wildcard-imports"]
+    outputToConsole = true
+    outputColorName = "RED"
+    enableExperimentalRules = true
 }
