--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,6 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
     id 'org.jlleitschuh.gradle.ktlint' version '11.4.0'
 }
-
-allprojects {
+subprojects {
     apply plugin: "org.jlleitschuh.gradle.ktlint"
 }
