--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,9 @@ dependencies {
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
 }
+
+//tasks.getByPath("preBuild").dependsOn("ktlintFormat")
+
 ktlint {
     android = true
     debug = true
