--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,19 +1,13 @@
 name: Pull Request
 
-#on:
-#  pull_request:
-#    branches:
-#      - master
 on:
-  workflow_run:
-    workflows: [ "Lint" ]
-    branches: [ master ]
-    types:
-      - completed
-
+  pull_request:
+    branches:
+      - master
 
 jobs:
-
+  lint:
+    uses: ./.github/workflows/lint.yml
   #  lint:
   #
   #    runs-on: ubuntu-latest
@@ -48,7 +42,7 @@ jobs:
 
 
   tests:
-    #    needs: [ lint ]
+    needs: [ lint ]
     runs-on: ubuntu-latest
 
     steps:
