--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -36,3 +36,6 @@ jobs:
 
       - name: check linting
         run: ./gradlew ktlintCheck --continue
+
+  outputs:
+    lint-successful: ${{ success() }}
