--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   lint:
-    uses: /.github/workflows/lint.yml
+    uses: ./.github/workflows/lint.yml
   #  lint:
   #
   #    runs-on: ubuntu-latest
