--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,52 +1,47 @@
 name: Pull Request
 
 on:
-  workflow_run:
-    workflows: [ "Lint" ]
-    types:
-      - completed
-#on:
-#  pull_request:
-#    branches:
-#      - master
+  pull_request:
+    branches:
+      - master
 
 jobs:
 
-  #  lint:
-  #
-  #    runs-on: ubuntu-latest
-  #
-  #    steps:
-  #      - name: Checkout current repository in runner
-  #        uses: actions/checkout@v3
-  #
-  #      - name: Setup JDK 17
-  #        uses: actions/setup-java@v3
-  #        with:
-  #          java-version: '17'
-  #          distribution: 'temurin'
-  #          cache: 'gradle'
-  #
-  #      - name: Cache Gradle
-  #        uses: actions/cache@v3
-  #        with:
-  #          path: |
-  #            ~/.gradle/caches
-  #            ~/.gradle/wrapper
-  #          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
-  #          restore-keys: |
-  #            ${{ runner.os }}-gradle-
-  #
-  #      - name: Grant execution permission to gradlew
-  #        run: chmod +x gradlew
-  #
-  #      - name: check linting
-  #        run: ./gradlew ktlintCheck --continue
+  lint:
+    uses: ./.github/workflows/lint.yml
 
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#      - name: Checkout current repository in runner
+#        uses: actions/checkout@v3
+#
+#      - name: Setup JDK 17
+#        uses: actions/setup-java@v3
+#        with:
+#          java-version: '17'
+#          distribution: 'temurin'
+#          cache: 'gradle'
+#
+#      - name: Cache Gradle
+#        uses: actions/cache@v3
+#        with:
+#          path: |
+#            ~/.gradle/caches
+#            ~/.gradle/wrapper
+#          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+#          restore-keys: |
+#            ${{ runner.os }}-gradle-
+#
+#      - name: Grant execution permission to gradlew
+#        run: chmod +x gradlew
+#
+#      - name: check linting
+#        run: ./gradlew ktlintCheck --continue
 
 
   tests:
-#    needs: lint
+    needs: lint
     runs-on: ubuntu-latest
 
     steps:
