--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -10,6 +10,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      -
+      - name: Checkout current repository in runner
+        uses: actions/checkout@v3
+
       - name: Trigger Lint Workflow
         uses: actions/workflow-dispatch@v2
         with:
@@ -20,6 +24,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+
+      - name: Checkout current repository in runner
+        uses: actions/checkout@v3
+
       - name: Trigger Tests Workflow
         uses: actions/workflow-dispatch@v2
         with:
