--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -6,39 +6,18 @@ on:
       - master
 
 jobs:
-
   lint:
-    uses: ./.github/workflows/lint.yml
+    runs-on: ubuntu-latest
 
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#      - name: Checkout current repository in runner
-#        uses: actions/checkout@v3
-#
-#      - name: Setup JDK 17
-#        uses: actions/setup-java@v3
-#        with:
-#          java-version: '17'
-#          distribution: 'temurin'
-#          cache: 'gradle'
-#
-#      - name: Cache Gradle
-#        uses: actions/cache@v3
-#        with:
-#          path: |
-#            ~/.gradle/caches
-#            ~/.gradle/wrapper
-#          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
-#          restore-keys: |
-#            ${{ runner.os }}-gradle-
-#
-#      - name: Grant execution permission to gradlew
-#        run: chmod +x gradlew
-#
-#      - name: check linting
-#        run: ./gradlew ktlintCheck --continue
+    steps:
 
+      - name: Checkout current repository in runner
+        uses: actions/checkout@v3
+
+      - name: Trigger Lint Workflow
+        uses: actions/workflow-dispatch@v3
+        with:
+          workflow: lint.yml
 
   tests:
     needs: lint
@@ -49,37 +28,7 @@ jobs:
       - name: Checkout current repository in runner
         uses: actions/checkout@v3
 
-      - name: Setup JDK 17
-        uses: actions/setup-java@v3
+      - name: Trigger Tests Workflow
+        uses: actions/workflow-dispatch@v2
         with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: 'gradle'
-
-      - name: Cache Gradle
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-
-      - name: Grant execution permission to gradlew
-        run: chmod +x gradlew
-
-      - name: Unit Test
-        run: ./gradlew test
-
-      - name: Android Test Report Action
-        uses: asadmansr/android-test-report-action@v1.2.0
-
-      - name: Check Test Results
-        run: |
-          if [ ${{ job.status }} == 'success' ]; then
-            echo "All tests passed. The pull request can be merged."
-          else
-            echo "Tests failed. The workflow will be marked as failed, and the pull request cannot be merged."
-            exit 1
-          fi
+          workflow: tests.yml
