--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -15,9 +15,8 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Trigger Lint Workflow
-        uses: actions/workflow-dispatch@v3
-        with:
-          workflow: lint.yml
+        run: |
+          gh workflow run lint.yml
 
   tests:
     needs: lint
@@ -29,6 +28,5 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Trigger Tests Workflow
-        uses: actions/workflow-dispatch@v2
-        with:
-          workflow: tests.yml
+        run: |
+          gh workflow run tests.yml
