--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -20,14 +20,17 @@ jobs:
           distribution: 'temurin'
           cache: 'gradle'
 
-      - name: Cache Gradle
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.gradle/caches/
-            ~/.gradle/wrapper/
-          key: cache-gradle-${{ hashFiles('build.gradle') }}
-          restore-keys: cache-gradle-
+      - name: Gradle Cache
+        uses: burrunan/gradle-cache-action@v1
+
+      #      - name: Cache Gradle
+      #        uses: actions/cache@v3
+      #        with:
+      #          path: |
+      #            ~/.gradle/caches/
+      #            ~/.gradle/wrapper/
+      #          key: cache-gradle-${{ hashFiles('build.gradle') }}
+      #          restore-keys: cache-gradle-
 
       - name: Grant execution permission to gradlew
         run: chmod +x gradlew
@@ -35,13 +38,13 @@ jobs:
       - name: Run ktlint
         run: ./gradlew ktlintCheck --continue
 
-#  detekt:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout Repo in runner
-#        uses: actions/checkout@v3
-#      - name: Run detekt
-#        run: ./gradlew detekt --continue
+  #  detekt:
+  #    runs-on: ubuntu-latest
+  #    steps:
+  #      - name: Checkout Repo in runner
+  #        uses: actions/checkout@v3
+  #      - name: Run detekt
+  #        run: ./gradlew detekt --continue
 
   test:
     #    needs: [ analyze_code ]
@@ -57,14 +60,17 @@ jobs:
           distribution: 'temurin'
           cache: 'gradle'
 
-      - name: Cache Gradle
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.gradle/caches/
-            ~/.gradle/wrapper/
-          key: cache-gradle-${{ hashFiles('build.gradle') }}
-          restore-keys: cache-gradle-
+      - name: Gradle Cache
+        uses: burrunan/gradle-cache-action@v1
+
+      #      - name: Cache Gradle
+      #        uses: actions/cache@v3
+      #        with:
+      #          path: |
+      #            ~/.gradle/caches/
+      #            ~/.gradle/wrapper/
+      #          key: cache-gradle-${{ hashFiles('build.gradle') }}
+      #          restore-keys: cache-gradle-
 
       - name: Grant execution permission to gradlew
         run: chmod +x gradlew
