--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'org.jlleitschuh.gradle.ktlint'
+    id 'com.google.firebase.appdistribution'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -25,8 +27,31 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            firebaseAppDistribution {
+                artifactType="APK"
+                releaseNotesFile="/path/to/releasenotes.txt"
+                testers="ahmad.abdelhamid35@gmail.com"
+            }
         }
     }
+    flavorDimensions "env"
+    productFlavors {
+        stage {
+            dimension "env"
+            firebaseAppDistribution {
+                releaseNotes="Release notes for staging"
+                testers="ahmad.abdelhamid35@gmail.com"
+            }
+        }
+        production {
+            dimension "env"
+            firebaseAppDistribution {
+                releaseNotes="Release notes for production"
+                testers="ahmad.abdelhamid35@gmail.com"
+            }
+        }
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -69,6 +94,14 @@ dependencies {
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
+
+//firebase
+    implementation platform('com.google.firebase:firebase-bom:32.1.0')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.firebase:firebase-firestore-ktx'
+//
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
@@ -84,8 +117,8 @@ dependencies {
 ktlint {
     android = true
     debug = true
-    ignoreFailures= false
-    disabledRules =["final-newline","no-wildcard-imports"]
+    ignoreFailures = false
+    disabledRules = ["final-newline", "no-wildcard-imports"]
     outputToConsole = true
     outputColorName = "RED"
     enableExperimentalRules = true
