--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -23,31 +23,43 @@ jobs:
       - name: Gradle Cache
         uses: burrunan/gradle-cache-action@v1
 
-      #      - name: Cache Gradle
-      #        uses: actions/cache@v3
-      #        with:
-      #          path: |
-      #            ~/.gradle/caches/
-      #            ~/.gradle/wrapper/
-      #          key: cache-gradle-${{ hashFiles('build.gradle') }}
-      #          restore-keys: cache-gradle-
-
       - name: Grant execution permission to gradlew
         run: chmod +x gradlew
 
       - name: Run ktlint
         run: ./gradlew ktlintCheck --continue
 
-  #  detekt:
-  #    runs-on: ubuntu-latest
-  #    steps:
-  #      - name: Checkout Repo in runner
-  #        uses: actions/checkout@v3
-  #      - name: Run detekt
-  #        run: ./gradlew detekt --continue
+  detekt:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repo in runner
+        uses: actions/checkout@v3
+
+      - name: Setup JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: 'gradle'
+
+      - name: Gradle Cache
+        uses: burrunan/gradle-cache-action@v1
+
+      - name: Grant execution permission to gradlew
+        run: chmod +x gradlew
+
+      - name: Run Detekt code analysis
+        run: ./gradlew detekt --continue
+
+
+      - name: Upload SARIF to GitHub using the upload-sarif action
+        uses: github/codeql-action/upload-sarif@v2
+        if: success() || failure()
+        with:
+          sarif_file: build/reports/detekt/detekt.sarif
+
 
   test:
-    #    needs: [ analyze_code ]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout current repository in runner
