--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,17 +26,25 @@ jobs:
       - name: Grant execution permission to gradlew
         run: chmod +x gradlew
 
-      - name: Decode Keystore File
-        uses: timheuer/base64-to-file@v1
-        id: decode_keystore
-        with:
-          fileName: "upload-keystore.keystore"
-          encodedString: ${{ secrets.STORE_FILE_B64 }}
+      - name: Configure Keystore
+        run: |
+          echo "$STORE_FILE_B64" > keystore.jks.b64
+          base64 -d -i keystore.jks.b64 > app/keystore.jks
+          echo "storeFile=upload-keystore.jks" >> keystore.properties
+          echo "keyAlias=$KEY_ALIAS" >> keystore.properties
+          echo "storePassword=$STORE_PASSWORD" >> keystore.properties
+          echo "keyPassword=$KEY_PASSWORD" >> keystore.properties
+        env:
+          STORE_FILE_B64: ${{ secrets.STORE_FILE_B64 }}
+          STORE_PASSWORD: ${{ secrets.STORE_PASSWORD }}
+          KEY_ALIAS: ${{ secrets.KEY_ALIAS}}
+          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+          FIREBASE_TOKEN: ${{secrets.FIREBASE_TOKEN}}
 
       - name: Build & deploy Android release
         run: ./gradlew assembleRelease appDistributionUploadProductionRelease
         env:
-#          KEYSTORE_FILE: ${{ steps.upload-keystore.keystore.outputs.filePath }}
+          STORE_FILE_B64: ${{ secrets.STORE_FILE_B64 }}
           STORE_PASSWORD: ${{ secrets.STORE_PASSWORD }}
           KEY_ALIAS: ${{ secrets.KEY_ALIAS}}
           KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
