--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,8 +29,8 @@ jobs:
       - name: Configure Keystore
         run: |
           echo "$STORE_FILE_B64" > keystore.jks.b64
-          base64 -d -i keystore.jks.b64 > app/keystore.jks
-          echo "storeFile=upload-keystore.jks" >> keystore.properties
+          base64 -d -i keystore.jks.b64 > keystore.jks
+          echo "storeFile=keystore.jks" >> keystore.properties
           echo "keyAlias=$KEY_ALIAS" >> keystore.properties
           echo "storePassword=$STORE_PASSWORD" >> keystore.properties
           echo "keyPassword=$KEY_PASSWORD" >> keystore.properties
