--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,7 @@ jobs:
           FIREBASE_TOKEN: ${{secrets.FIREBASE_TOKEN}}
 
       - name: Build & deploy Android release
-        run: ./gradlew assembleRelease appDistributionUploadProductionRelease
+        run: ./gradlew assembleRelease appDistributionUploadProductionRelease --artifactType="AAB"
         env:
           STORE_FILE_B64: ${{ secrets.STORE_FILE_B64 }}
           STORE_PASSWORD: ${{ secrets.STORE_PASSWORD }}
