--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,12 +13,23 @@ jobs:
       - name: Checkout Repo in runner
         uses: actions/checkout@v3
 
-      - name: Setup JDK 17
-        uses: actions/setup-java@v3
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@ec02537da5712d66d4d50a0f33b7eb52773b5ed1
         with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: gradle
+          ruby-version: '3.1'
+
+      - name: Install bundle
+        run: |
+              bundle config path vendor/bundle
+              bundle install --jobs 4 --retry 3
+
+      - name: Cache Ruby - Bundler
+        uses: actions/cache@v2
+        with:
+          path: vendor/bundle
+          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-gems-
 
       - name: Gradle Cache
         uses: burrunan/gradle-cache-action@v1
@@ -41,14 +52,20 @@ jobs:
           KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
           FIREBASE_TOKEN: ${{secrets.FIREBASE_TOKEN}}
 
-      - name: Build & deploy Android release
-        run: ./gradlew bundleProductionRelease appDistributionUploadProductionRelease
+      - name: Distribute app with 🔥 App Distribution 🚀
+        run: bundle exec fastlane distribute
         env:
-          STORE_FILE_B64: ${{ secrets.STORE_FILE_B64 }}
-          STORE_PASSWORD: ${{ secrets.STORE_PASSWORD }}
-          KEY_ALIAS: ${{ secrets.KEY_ALIAS}}
-          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+          FIREBASE_APP_ID: ${{ secrets.FIREBASE_APP_ID }}
           FIREBASE_TOKEN: ${{secrets.FIREBASE_TOKEN}}
+
+#      - name: Build & deploy Android release
+#        run: ./gradlew bundleProductionRelease appDistributionUploadProductionRelease
+#        env:
+#          STORE_FILE_B64: ${{ secrets.STORE_FILE_B64 }}
+#          STORE_PASSWORD: ${{ secrets.STORE_PASSWORD }}
+#          KEY_ALIAS: ${{ secrets.KEY_ALIAS}}
+#          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+#          FIREBASE_TOKEN: ${{secrets.FIREBASE_TOKEN}}
 
 #      - name: Build & deploy production-release
 #        run: ./gradlew assembleRelease appDistributionUploadProductionRelease
